--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 			<version>1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>1.1.4</version>
+		</dependency>
+
     </dependencies>
 
 
