--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
 spring:
+  data:
+    elasticsearch:
+      cluster-name: elasticsearch
+      repositories:
+        enabled: true
+      cluster-nodes: 127.0.0.1:9300
+
   datasource:
     url: jdbc:mysql://localhost:3306/jys?useUnicode=true&characterEncoding=UTF-8&useSSL=true
     username: root
@@ -21,4 +28,10 @@ mapper :
   mappers :
   not-empty : false
   identity : MYSQL
+
+elasticsearch:
+  clustername: elasticsearch
+  host: localhost
+  port: 9300
+
 
